<resources>
    <string name="app_name">Courses App</string>
    <string name="loginTxt">Вход</string>
    <string name="emailTxt">Email</string>
    <string name="defaultEmailTxt">example@gmail.com</string>
    <string name="enterPasswordTxt">Введите пароль</string>
    <string name="passwordTxt">Пароль</string>
    <string name="noAccountTxt">Нету аккаунта? </string>
    <string name="registrationTxt">Регистрация</string>
    <string name="forgotPasswordTxt">Забыл пароль</string>
    <string name="goToOk">Переход в одноклассники</string>
    <string name="goToVk">Переход ВК</string>
    <string name="main_screen">Главная</string>
    <string name="saved_screen">Избранное</string>
    <string name="account_screen">Аккаунт</string>
    <string name="no_impl_yet">No impl yet</string>
    <string name="filter">filter</string>
</resources>