<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:padding="@dimen/large_dimen">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginTxt"
        android:textColor="@color/white"
        android:textSize="@dimen/login_title_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/login_title_margin_top" />

    <TextView
        android:id="@+id/tvEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailTxt"
        android:textColor="@color/white"
        android:textSize="@dimen/login_label_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:layout_marginTop="@dimen/xxlarge_dimen" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="@dimen/login_field_height"
        android:hint="@string/defaultEmailTxt"
        android:textColorHint="@color/hint_text_color"
        android:textColor="@color/white"
        android:background="@drawable/bg_text_field"
        android:paddingHorizontal="@dimen/login_field_padding"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmailLabel"
        android:layout_marginTop="@dimen/small_dimen" />

    <TextView
        android:id="@+id/tvPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordTxt"
        android:textColor="@color/white"
        android:textSize="@dimen/login_label_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:layout_marginTop="@dimen/large_dimen" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/login_field_height"
        android:hint="@string/enterPasswordTxt"
        android:textColorHint="@color/hint_text_color"
        android:textColor="@color/white"
        android:background="@drawable/bg_text_field"
        android:paddingHorizontal="@dimen/login_field_padding"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordLabel"
        android:layout_marginTop="@dimen/small_dimen" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="@dimen/login_field_height"
        android:layout_marginTop="@dimen/login_button_margin_top"
        android:background="@drawable/btn_bg_green"
        android:text="@string/loginTxt"
        android:textColor="@color/white"
        android:textSize="@dimen/login_label_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <LinearLayout
        android:id="@+id/accountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:layout_marginTop="@dimen/medium_dimen">

        <TextView
            android:id="@+id/tvNoAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noAccountTxt"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <TextView
            android:id="@+id/tvRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrationTxt"
            android:textColor="@color/green"
            android:textSize="@dimen/button_text_size"
            android:layout_marginStart="@dimen/button_icon_margin" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPasswordTxt"
        android:textColor="@color/green"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accountText"
        android:layout_marginTop="@dimen/small_dimen" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:dividerColor="@color/stroke"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
        android:layout_marginTop="@dimen/xlarge_dimen" />

    <LinearLayout
        android:id="@+id/llSocialButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:layout_marginTop="@dimen/xlarge_dimen">

        <ImageButton
            android:background="@drawable/btn_bg_vk"
            android:id="@+id/btnVk"
            android:layout_width="0dp"
            android:layout_height="@dimen/social_button_height"
            android:layout_weight="1"
            android:src="@drawable/ic_vk"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/login_label_text_size"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/small_dimen" />

        <ImageButton
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="@dimen/social_button_height"
            android:layout_weight="1"
            android:src="@drawable/ic_ok"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/login_label_text_size"
            android:textStyle="bold"
            android:background="@drawable/btn_bg_ok"
            android:layout_marginStart="@dimen/small_dimen" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>